--- a/lesson-04-spring-boot/src/main/resources/templates/cart.html
+++ b/lesson-04-spring-boot/src/main/resources/templates/cart.html
@@ -44,29 +44,36 @@
                 <table class="table table-bordered my-2">
                     <thead>
                     <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Count</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Amounnt</th>
-                        <th scope="col">Actions</th>
+                        <th class="text-center" scope="col">Id</th>
+                        <th class="text-center" scope="col">Name</th>
+                        <th class="text-center" scope="col">Count</th>
+                        <th class="text-center" scope="col">Price</th>
+                        <th class="text-center" scope="col">Amount</th>
+                        <th class="text-center" scope="col">Actions</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="item : ${cart}">
-                        <th scope="row" th:text="${item.productId}">1</th>
+                        <td class="text-center" th:text="${item.productId}">1</td>
                         <td th:text="${item.productName}">Product1</td>
-                        <th class="align-middle" th:text="${item.count}">2</th>
-                        <!--                    <th class="align-right" th:text="${item.productPrice}">1,0</th>-->
-                        <!--                    <th class="align-right" th:text="${item.amount}">1,0</th>-->
-                        <th class="align-right" th:text="${#numbers.formatDecimal(item.productPrice,1,2)}">1,0</th>
-                        <th class="align-right" th:text="${#numbers.formatDecimal(item.amount,1,2)}">1,0</th>
-
+                        <td class="text-center" th:text="${item.count}">2</td>
+                        <td class="text-right" th:text="${#numbers.formatDecimal(item.productPrice,1,2)}">1,0</td>
+                        <td class="text-right" th:text="${#numbers.formatDecimal(item.amount,1,2)}">1,0</td>
                         <td>
                             <a class="btn btn-success" th:href="@{'/cart/add?id='+${item.productId}}"><i
                                     class="fas fa-plus"></i></a>
                             <a class="btn btn-danger" th:href="@{'/cart/remove?id='+${item.productId}}"><i
                                     class="fas fa-minus"></i></a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="text-right" colspan="4">
+                            ИТОГО
+                        </td>
+                        <td class="text-right" th:text="${#numbers.formatDecimal(totalAmount,1,2)}">
+                            1,0
+                        </td>
+                        <td>
                         </td>
                     </tr>
                     </tbody>
